--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -40,6 +40,14 @@ theme_update(axis.text = element_text(size = 9),
 options(dplyr.summarise.inform = F) # Suppress summarise() warning
 ```
 
+```{r laea-projection}
+cell_res <- 25 # Cell resolution in km
+arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
+projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
+res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
+```
+
+
 # Sea ice data
 
 Code that downloads sea ice data from the [Copernicus Climate website]( https://cds.climate.copernicus.eu/cdsapp#!/dataset/satellite-sea-ice-concentration?tab=overview). We use the daily sea ice concentration derived from satellite observations from ECMWF. Data is downloaded in two batches because ECMWF changed their Climate Data Record (CDR) on 2016-01-01. I changed the sea ice data projection from Lambert's azimuthal Equal Area (EPSG:6931) to WGS84 (EPSG:4326) and match the resolution to that of backscatter anomalies (2 deg longitude * 1 deg latitude).
@@ -209,11 +217,6 @@ To match sea ice records with acoustic data, I rasterized sea ice data on the sa
 More info on this projection can be found on the [NSIDC website](https://nsidc.org/data/ease/). Because "raw" sea ice data has a 25 km * 25 km resolution, I match that resolution to the final projection (150 km * 150 km).
 
 ```{r EPSG-6931-seaice-grid}
-cell_res <- 50 # Cell resolution in km
-arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
-projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
-res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
-
 seaice_grid_laea <- data.frame() # Empty dataframe that will be filled with gridded CTD data
 
 for (i in seq(2015, 2017, 1)) { # Data gridding
@@ -475,7 +478,7 @@ phy %>%
 Data is projected on the EPSG:6931 projection. I also calculate temperature (x - mean(x over the whole time series) and current anomalies. 
 
 ```{r EPSG-6931-physics-grid}
-cell_res <- 50 # Cell resolution in km
+cell_res <- 25 # Cell resolution in km
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") # Seaice projection
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) # Convert proj unit from m to km
 res(arctic_laea) <- c(cell_res, cell_res) # Define the 100 km cell resolution
@@ -552,9 +555,72 @@ phy_grid_laea %>% # Map current velocity at 222 m
         axis.text = element_blank(), axis.ticks = element_blank(), axis.title = element_blank())
 ```
 
+# Ocean colour data 
+
+Data downloaded from Copernicus Marine. The ocean colour data comes from the  [OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088](https://resources.marine.copernicus.eu/product-detail/OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/INFORMATION) dataset. Data is monthly averaged and has a cell resolution of 1 x 1 km on a WGS 84 / Plate Carree (EPSG:32662) projection.
+
+I load the data and project it on the arctic laea grid (EPSG:6931 25 x 25 km). The time variable is seconds since 1970-01-01 00:00:00.
+
+```{r chl-to-csv}
+file_list <- list.files("data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088",
+                        pattern = ".nc", full.names = T) # List files per year
+for (i in file_list) { # Loop through each file
+  date_file <- str_remove(i, pattern = "data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/") %>%
+    str_remove(., pattern = "_chl_CMEMS.nc") # Extract date
+  chl_tmp <- tidync(i) %>%
+    activate("D2,D1,D0") %>% # chlorophyll data
+    hyper_tibble() %>%
+    rename(lat = latitude, lon = longitude, chl = CHL)
+  
+  if (nrow(chl_tmp > 0)){
+    # Rasterize data in laea
+    chl_tmp_laea <- SpatialPointsDataFrame(SpatialPoints(cbind(chl_tmp$lon, chl_tmp$lat), proj4string = CRS("EPSG:4326")), 
+                                           data.frame(lat = chl_tmp$lat,
+                                                      lon = chl_tmp$lon,
+                                                      time = chl_tmp$time,
+                                                      chl = chl_tmp$chl)) %>%
+      spTransform(., CRSobj = crs(arctic_laea)) %>% # Change projection to EPSG:6931
+      rasterize(., arctic_laea, fun = mean, na.rm = T) %>% # Rasterize on the arctic_laea grid (with correct grid resolution)
+      dropLayer(1) %>% # Remove ID layer
+      rasterToPoints() %>% # Convert raster to data frame
+      as.data.frame() %>%
+      rename(xc = x, yc = y) %>% # Rename variables
+      mutate(date = as.POSIXct(time , origin = "1970-01-01 00:00:00", tz = "UTC"),
+             year = year(date)) 
+    # Write csv
+    write_csv(chl_tmp_laea, file = paste0("data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/ocean_colour_",
+                                          date_file, ".csv"))
+    print(paste0("Processing of ", date_file, " chl data finished."))
+    rm(chl_tmp_laea) # Remove temporary file
+    
+    } else {
+      print(paste0("No chl data for ", date_file, ". Moving to next file."))
+    }
+  
+  rm(chl_tmp) # Remove temporary variables
+}
+rm(date_file, i, file_list)
+```
+
+After rasterizing data I reload the csv files and combine the monthly data into a single dataframe. Then, I calculate the average annual concentration of chl a per cell. 
+
+```{r chl-tidy, message=FALSE}
+chl_grid_laea <- list.files("data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088", 
+                            pattern = "*.csv", full.names = TRUE) %>% # List files
+  map_dfr(.f = ~ read_csv(., show_col_types = FALSE)) %>% # Read files 
+  mutate(area = factor(case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
+                                 lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
+                                 lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
+                       levels = c("BF_CAA", "BB", "SV"))) %>%
+  group_by(year, area, xc, yc, lat, lon) %>%
+  summarise(chl = mean(chl)) %>%
+  ungroup()
+```
+
 # Save data 
 
 ```{r save-data}
 save(seaice_grid_laea, seaice_grid_latlon, file = "data/remote_sensing/seaice_grids.RData") # Save data
 save(phy_grid_laea, file = "data/remote_sensing/physics_grids.RData") # Save data
+save(chl_grid_laea, file = "data/remote_sensing/chl_grid.RData") # Save data
 ```
